--- a/source/_patterns/02-organisms/footers/site-footer/_site-footer.scss
+++ b/source/_patterns/02-organisms/footers/site-footer/_site-footer.scss
@@ -107,6 +107,7 @@
 
     .social-icon {
       background-color: $white;
+      color: $dark-blue;
 
       svg {
         fill: $blue;
